--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,11 @@
   ],
   "env": {
     "PYTHON_VERSION": "3.11"
+  },
+  "functions": {
+    "main.py": {
+      "maxDuration": 30
+    }
   }
 }
 
