Fix Vercel deployment configuration
- Updated requirements.txt: uncommented Supabase, removed testing deps
- Created requirements-dev.txt for development dependencies
- Updated .gitignore to allow test files in tests/ directory
- Simplified vercel.json configuration
- Added Vercel deployment troubleshooting documentation
- Verified main.py imports successfully

--- a/.gitignore
+++ b/.gitignore
@@ -47,9 +47,11 @@ logs/
 .DS_Store
 Thumbs.db
 
-# Test files
+# Test files (but allow tests/ directory)
 test_*.py
+!tests/test_*.py
 *_test.py
+!tests/*_test.py
 
 # Temporary files
 *.tmp
